tests/baselines/reference/ambientGetters(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
ambientGetters.ts(6,18): error TS1183: An implementation cannot be declared in ambient contexts.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== ambientGetters.ts (1 errors) ====
    declare class A {
        get length() : number;
    }
    
    declare class B {
        get length() { return 0; }
                     ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    }